try to extract address with the one method

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,5 +1,9 @@
 <h2>Main stories page</h2>
 <br/>
+<!--
+<br/>
+<my-story></my-story>
+<br/>-->
 
 <add-story [stories]="stories"></add-story>
 <br/>
