ok with 1 story showed,

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,7 +1,13 @@
 <h2>Main stories page</h2>
+
+<br/>
+<selected-story [selectedStory]="story"></selected-story>
+<br/>
+
 <br/>
 <add-story [stories]="stories"></add-story>
 <br/>
 
+<br/>
 <all-stories [allStories]="stories"></all-stories>
 <br/>
