add rform presque ok , a cabler sur service

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,6 +1,10 @@
 <h2>Main stories page</h2>
 
 <br/>
+<story-add-form></story-add-form>
+<br/>
+
+<br/>
 <selected-story [selectedStory]="story"></selected-story>
 <br/>
 
