add story with observable and form

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,15 +1,11 @@
 <h2>Main stories page</h2>
 
 <br/>
-<story-add-form></story-add-form>
+<story-add-form [stories]="stories"></story-add-form>
 <br/>
 
 <br/>
 <selected-story [selectedStory]="story"></selected-story>
-<br/>
-
-<br/>
-<add-story [stories]="stories"></add-story>
 <br/>
 
 <br/>
