--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div [hidden]="submitted">
+  <div>
     <h1>Story Form</h1>
     <form (ngSubmit)="onSubmit()" #storyForm="ngForm">
 
