add story with observable and form

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,6 +1,10 @@
 <h2>Main stories page</h2>
 
 <br/>
+<story-statistics></story-statistics>
+<br/>
+
+<br/>
 <story-add-form [stories]="stories"></story-add-form>
 <br/>
 
@@ -11,3 +15,4 @@
 <br/>
 <all-stories [allStories]="stories"></all-stories>
 <br/>
+
