add story with observable and form

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,10 +1,6 @@
 <h2>Main stories page</h2>
 
 <br/>
-<story-statistics></story-statistics>
-<br/>
-
-<br/>
 <story-add-form [stories]="stories"></story-add-form>
 <br/>
 
@@ -16,3 +12,4 @@
 <all-stories [allStories]="stories"></all-stories>
 <br/>
 
+<button (click)="gotoStatistics()">View Statistics</button>
