add story with observable and form

--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h1>Story Form</h1>
+    <h1> {{title}}</h1>
     <form (ngSubmit)="onSubmit()" #storyForm="ngForm">
 
       <div class="form-group">
