add story with observable and form

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -12,4 +12,10 @@
 <all-stories [allStories]="stories"></all-stories>
 <br/>
 
+<br/>
 <button (click)="gotoStatistics()">View Statistics</button>
+<br/>
+
+<br/>
+<button (click)="gotoSandbox()">Go in sandbox</button>
+<br/>
