--- a/app/css/app.component.css
+++ b/app/css/app.component.css
@@ -26,3 +26,11 @@ nav a:hover {
 nav a.active {
   color: #039be5;
 }
+
+label {
+  display: inline-block;
+  width: 3em;
+  margin: .5em 0;
+  color: #607D8B;
+  font-weight: bold;
+}
