--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,6 +1,10 @@
 <h2>Main stories page</h2>
 
 <br/>
+<story-map [stories]="stories"></story-map>
+<br/>
+
+<br/>
 <story-add-form [stories]="stories"></story-add-form>
 <br/>
 
