works with ngx-ol

--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -1,7 +1,7 @@
 <h2>Main stories page</h2>
 
 <br/>
-<story-ngx-ol></story-ngx-ol>
+<story-ngx-ol [allStories]="stories"></story-ngx-ol>
 <br/>
 
 <br/>
