prepare for map

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -2,7 +2,7 @@
 
 <aol-map [width]="'60%'" [height]="'60%'">
   <aol-view [zoom]="zoom">
-    <aol-coordinate [x]="5.795122" [y]="45.210225" [srid]="'EPSG:4326'"></aol-coordinate>
+    <aol-coordinate [x]="692249.47" [y]="5804715.26" [srid]="'EPSG:3857'"></aol-coordinate>
   </aol-view>
   <aol-layer-tile>
     <aol-source-osm></aol-source-osm>
