--- a/app/html/story-map.component.html
+++ b/app/html/story-map.component.html
@@ -1,9 +1,33 @@
 <div class="container">
+  <style>
+    #map {
+      width: 400px;
+      height: 250px;
+    }
+  </style>
+  <script src="https://openlayers.org/en/v4.3.1/build/ol.js" type="text/javascript"></script>
   <div>
     <h1> stories map </h1>
 
     <div>{{simple}}</div>
-    <div>{{map}}</div>
+    <div id="map" class="map"></div>
+
+    <div id="map2" class="map"></div>
+
+    <script type="text/javascript">
+      var map = new ol.Map({
+        target: 'mapo',
+        layers: [
+          new ol.layer.Tile({
+            source: new ol.source.OSM()
+          })
+        ],
+        view: new ol.View({
+          center: ol.proj.fromLonLat([37.41, 8.82]),
+          zoom: 4
+        })
+      });
+    </script>
 
   </div>
 </div>
