works with ngx-ol

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -1,6 +1,7 @@
 
 
 <aol-map [width]="'60%'" [height]="'60%'">
+  <aol-interaction-default></aol-interaction-default>
   <aol-view [zoom]="zoom">
     <aol-coordinate [x]="692249.47" [y]="5804715.26" [srid]="'EPSG:3857'"></aol-coordinate>
   </aol-view>
