ol map ok with stories list

--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -15,7 +15,7 @@
         <label for="address">address</label>
         <input type="text" class="form-control" id="address"
                required
-               [(ngModel)]="model.address" name="address"
+               [(ngModel)]="model.address.realAddress" name="realAddress"
                #name="ngModel">
       </div>
 
