--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -1,32 +1,34 @@
-<aol-map [width]="'80%'" [height]="'70%'">
+<aol-map
+  [width]="'80%'"
+  [height]="'70%'"
+  (onDblClick)="fillCoordinates($event)">
+
   <aol-interaction-default></aol-interaction-default>
+
   <aol-view [zoom]="zoom">
     <aol-coordinate [x]="692249.47" [y]="5804715.26" [srid]="'EPSG:3857'"></aol-coordinate>
   </aol-view>
+
   <aol-layer-tile>
     <aol-source-osm></aol-source-osm>
   </aol-layer-tile>
 
   <aol-layer-vector [opacity]="opacity">
     <aol-source-vector>
-
       <li *ngFor="let story of allStories">
-
-      <aol-feature>
-        <aol-geometry-point>
-          <aol-coordinate [x]="story.address.coordinate.x" [y]="story.address.coordinate.y" [srid]="story.address.coordinate.srid"></aol-coordinate>
-        </aol-geometry-point>
-        <aol-style>
-          <aol-style-circle [radius]="5">
-            <aol-style-stroke [color]="'black'" [width]="width"></aol-style-stroke>
-            <aol-style-fill [color]="'red'"></aol-style-fill>
-          </aol-style-circle>
-        </aol-style>
-      </aol-feature>
-
+        <aol-feature>
+          <aol-geometry-point>
+            <aol-coordinate [x]="story.address.coordinate.x" [y]="story.address.coordinate.y"
+                            [srid]="story.address.coordinate.srid"></aol-coordinate>
+          </aol-geometry-point>
+          <aol-style>
+            <aol-style-circle [radius]="5">
+              <aol-style-stroke [color]="'black'" [width]="width"></aol-style-stroke>
+              <aol-style-fill [color]="'red'"></aol-style-fill>
+            </aol-style-circle>
+          </aol-style>
+        </aol-feature>
       </li>
-
-
     </aol-source-vector>
   </aol-layer-vector>
 
