--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -21,7 +21,7 @@
       </div>
       <div style="border: 1px solid; border-radius: 7pt;">
         <br/>
-        <story-add-form [stories]="stories" [x]="x"></story-add-form>
+        <story-add-form [stories]="stories" [mapBrowserEvent]="mapBrowserEvent"></story-add-form>
         <br/>
       </div>
     </div>
