--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <h1> {{title}}</h1>
-    <h2> {{x}} </h2>
+    <h2> {{mapBrowserEvent}} </h2>
     <form (ngSubmit)="onSubmit()" #storyForm="ngForm">
 
       <div class="form-group">
