--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <h1> {{title}}</h1>
-    <h2> {{mapBrowserEvent.coordinate[0]}} </h2>
+
     <form (ngSubmit)="onSubmit()" #storyForm="ngForm">
 
       <div class="form-group">
@@ -30,5 +30,12 @@
 
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
+
+    <div>
+      <div *ngIf="mapBrowserEvent !== undefined;then display else noDisplay"></div>
+      <ng-template #display><h2> {{mapBrowserEvent.coordinate[0]}}, {{mapBrowserEvent.coordinate[1]}}</h2></ng-template>
+      <ng-template #noDisplay> <h2>Please double click on the map to add a story</h2></ng-template>
+    </div>
+
   </div>
 </div>
