--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -1,8 +1,16 @@
 <div class="container">
   <div>
-    <h1> {{title}}</h1>
+    <h1> {{pageTitle}}</h1>
 
     <form (ngSubmit)="onSubmit()" #storyForm="ngForm">
+
+      <div class="form-group">
+        <label for="title">title</label>
+        <input type="text" class="form-control" id="title"
+               required
+               [(ngModel)]="model.title" name="title"
+               #name="ngModel">
+      </div>
 
       <div class="form-group">
         <label for="description">description</label>
