--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -1,7 +1,7 @@
 <aol-map
-  [width]="'80%'"
-  [height]="'70%'"
-  (onDblClick)="fillCoordinates($event)">
+  [width]="'8%'"
+  [height]="'7%'"
+  (onClick)="fillCoordinates($event)">
 
   <aol-interaction-default></aol-interaction-default>
 
