--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -29,7 +29,7 @@
 
   </div>
 
-  <div style="display: block">
+  <div id="all-stories-container">
     <div style="border: 1px solid; border-radius: 7pt;">
       <br/>
       <all-stories [allStories]="stories"></all-stories>
