--- a/app/html/story.component.html
+++ b/app/html/story.component.html
@@ -2,7 +2,7 @@
 
 <div>
 
-  <div style="display: flex; flex-row: row">
+  <div id="map-add-selected-container">
 
     <div style="flex: 3 1 70%; order: 1">
 
