--- a/app/html/story-map.component.html
+++ b/app/html/story-map.component.html
@@ -1,33 +1,61 @@
-<div class="container">
-  <style>
-    #map {
-      width: 400px;
-      height: 250px;
-    }
-  </style>
-  <script src="https://openlayers.org/en/v4.3.1/build/ol.js" type="text/javascript"></script>
-  <div>
-    <h1> stories map </h1>
+<link rel="stylesheet" href="https://openlayers.org/en/v3.20.1/css/ol.css" type="text/css">
+<style type="text/css">
+  div#viewerDiv {
+    width:100%;
+    height:500px;
+  }
+</style>
+<script type="text/javascript" src="https://openlayers.org/en/v4.3.3/build/ol.js"></script>
+<div id="viewerDiv"></div>
+<script type="text/javascript">
+  var projection = ol.proj.get('EPSG:3857');
+  var resolutions = [
+    156543.03392804103,
+    78271.5169640205,
+    39135.75848201024,
+    19567.879241005125,
+    9783.939620502562,
+    4891.969810251281,
+    2445.9849051256406,
+    1222.9924525628203,
+    611.4962262814101,
+    305.74811314070485,
+    152.87405657035254,
+    76.43702828517625,
+    38.218514142588134,
+    19.109257071294063,
+    9.554628535647034,
+    4.777314267823517,
+    2.3886571339117584,
+    1.1943285669558792,
+    0.5971642834779396,
+    0.29858214173896974,
+    0.14929107086948493,
+    0.07464553543474241
+  ] ;
 
-    <div>{{simple}}</div>
-    <div id="map" class="map"></div>
-
-    <div id="map2" class="map"></div>
-
-    <script type="text/javascript">
-      var map = new ol.Map({
-        target: 'mapo',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.OSM()
-          })
-        ],
-        view: new ol.View({
-          center: ol.proj.fromLonLat([37.41, 8.82]),
-          zoom: 4
+  var map = new ol.Map({
+    layers: [
+      new ol.layer.Tile({
+        source: new ol.source.WMTS({
+          attributions: ["IGN-F/Géoportail"],
+          url:'https://wxs.ign.fr/2mqbg0z6cx7ube8gsou10nrt/geoportail/wmts',
+          layer:'ORTHOIMAGERY.ORTHOPHOTOS',
+          matrixSet: 'PM',
+          format: 'image/jpeg',
+          tileGrid: new ol.tilegrid.WMTS({
+            origin: [-20037508,20037508],
+            resolutions: resolutions,
+            matrixIds:["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19"],
+          }),
+          style: 'normal'
         })
-      });
-    </script>
-
-  </div>
-</div>
+      })
+    ],
+    target: 'viewerDiv',
+    view: new ol.View({
+      center: [260516,6246918],
+      zoom: 10
+    })
+  });
+</script>
