http://wxs.ign.fr/2mqbg0z6cx7ube8gsou10nrt/wmts?layer=ORTHOIMAGERY.ORTHOPHOTOS&style=normal&tilematrixset=PM&Service=WMTS&Request=GetTile&Version=1.0.0&Format=image%2Fjpeg&TileMatrix=18&TileCol=-2825&TileRow=-2892 Request Method:GET Status Code:404 Not Found

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -25,6 +25,7 @@
                 [matrixSet]="matrixSet"
                 [format]="format"
                 [style]="style"
+                [attributions]="attributions"
               >
                 <aol-tilegrid-wmts
                   [resolutions]="resolutions"
