prepare for map

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -26,6 +26,7 @@
                 [format]="format"
                 [style]="style"
                 [attributions]="attributions"
+                [crossOrigin]="crossOrigin"
               >
                 <aol-tilegrid-wmts
                   [resolutions]="resolutions"
