cleaned, map centered on croix verte + repères ok

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -71,7 +71,7 @@
 
     </div>
     <div>
-      <span>opacity:</span>
+      <span>points opacity:</span>
       <button (click)="increaseOpacity()">+</button>
       <button (click)="decreaseOpacity()">-</button>
     </div>
