add 2 minor translations

--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -71,12 +71,12 @@
 
     </div>
     <div>
-      <span>points opacity:</span>
+      <span  i18n="@@pointsOpacityId">Points_opacity:</span>
       <button (click)="increaseOpacity()">+</button>
       <button (click)="decreaseOpacity()">-</button>
     </div>
     <div>
-      <span>zoom:</span>
+      <span  i18n="@@mapZoomId">Map_zoom:</span>
       <button (click)="increaseZoom()">+</button>
       <button (click)="decreaseZoom()">-</button>
     </div>
