--- a/app/html/story-add-form.component.html
+++ b/app/html/story-add-form.component.html
@@ -44,7 +44,7 @@
                #name="ngModel">
       </div>
 
-      <button i18n="@@submitId" type="submit" class="btn btn-default">submit</button>
+      <button i18n="@@createId" type="submit" class="btn btn-default">create</button>
     </form>
 
     <div>
