--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -55,7 +55,7 @@
               <aol-style>
                 <aol-style-circle [radius]="5">
                   <aol-style-stroke [color]="'black'" [width]="width"></aol-style-stroke>
-                  <aol-style-fill [color]="'red'"></aol-style-fill>
+                  <aol-style-fill [color]="story.user.color"></aol-style-fill>
                 </aol-style-circle>
               </aol-style>
             </aol-feature>
