--- a/app/css/menu-bar.component.css
+++ b/app/css/menu-bar.component.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
 }
 
-#menu-bar > div {
+#menu-bar > form > div {
   width: 120px;
   height: 33px;
-  border: 1px  black
+  border: 1px solid black
 }
