--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -5,10 +5,11 @@
   <div>
     <aol-map
       id="aol-map"
-      [width]="'10%'"
-      [height]="'10%'"
+      [width]="'100%'"
+      [height]="'100%'"
       (onClick)="fillCoordinates($event)"
-      (onPointerMove)="pointerHasMoved($event)">
+      (onPointerMove)="pointerHasMoved($event)"
+      >
 
       <aol-interaction-default></aol-interaction-default>
 
@@ -49,8 +50,8 @@
 
       <aol-layer-vector [opacity]="opacity">
         <aol-source-vector>
-          <div *ngFor="let story of allStories; let index = index" [ngClass]="storyTooltip">
-            <span [ngClass]="storyTooltipText">yop</span>
+          <div *ngFor="let story of allStories; let index = index" [ngClass]="'storyTooltip'">
+            <span [ngClass]="'storyTooltipText'">yop</span>
             <aol-feature >
               <aol-geometry-point>
                 <aol-coordinate [x]="story.address.coordinate.x"
@@ -64,6 +65,7 @@
                   <aol-style-stroke [color]="'black'" [width]="width"></aol-style-stroke>
                   <aol-style-fill [color]="story.user.color"></aol-style-fill>
                 </aol-style-circle>
+                <aol-style-text [text]="zipp"></aol-style-text>
               </aol-style>
             </aol-feature>
 
