--- a/app/html/story-ngx-ol.component.html
+++ b/app/html/story-ngx-ol.component.html
@@ -1,15 +1,19 @@
 <div>
 
   <!-- http://jsfiddle.net/uarf1888/ -->
+  <!-- http://techslides.com/openlayers-map-with-tooltips -->
+  <!-- https://gis.stackexchange.com/questions/223649/openlayers-3-feature-popup-without-jquery-bootstrap/223650#223650 -->
 
   <div>
     <aol-map
       id="aol-map"
-      [width]="'100%'"
-      [height]="'100%'"
+      [width]="'10%'"
+      [height]="'10%'"
       (onClick)="fillCoordinates($event)"
       (onPointerMove)="pointerHasMoved($event)"
       >
+
+      <div id="tooltip" class="tooltip"></div>
 
       <aol-interaction-default></aol-interaction-default>
 
@@ -54,11 +58,21 @@
             <span [ngClass]="'storyTooltipText'">yop</span>
             <aol-feature >
               <aol-geometry-point>
-                <aol-coordinate [x]="story.address.coordinate.x"
-                                [y]="story.address.coordinate.y"
-                                [srid]="story.address.coordinate.srid">
 
-                </aol-coordinate>
+
+                <aol-overlay>
+                  <aol-coordinate [x]="story.address.coordinate.x"
+                                  [y]="story.address.coordinate.y"
+                                  [srid]="story.address.coordinate.srid">
+
+                  </aol-coordinate>
+                  <aol-content>
+                    <div >
+                      <h1>This is an overlay</h1>
+                    </div>
+                  </aol-content>
+                </aol-overlay>
+
               </aol-geometry-point>
               <aol-style>
                 <aol-style-circle [radius]="5">
